examples/should-fail/f08_bad_universe_level.lean
def demo_bad_universe_level : Sort 2 :=
  Prop
